--- a/index.html
+++ b/index.html
@@ -3,14 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registros do Outro Lado</title>
+    <title>O Enigma do Outro Lado</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Cinzel', serif;
+      }
+      @keyframes glitch-move {
+        0%, 100% { transform: translate(0, 0); opacity: 1; }
+        10% { transform: translate(-3px, -3px); }
+        20% { transform: translate(3px, 3px); }
+        30% { transform: translate(-3px, 3px); }
+        40% { transform: translate(3px, -3px); }
+        50% { transform: translate(-3px, 0); opacity: 0.8; }
+        60% { transform: translate(3px, 0); }
+        70% { transform: translate(0, 3px); }
+        80% { transform: translate(0, -3px); opacity: 0.9; }
+        90% { transform: translate(-3px, -3px); }
+      }
+      .glitch-effect {
+        animation: glitch-move 0.1s linear infinite;
+        filter: invert(1) hue-rotate(180deg);
+      }
+      /* Terminal styles */
+      @keyframes flicker {
+        0%, 18%, 22%, 25%, 53%, 57%, 100% {
+          text-shadow:
+            0 0 4px #34d399,
+            0 0 11px #34d399,
+            0 0 19px #34d399,
+            0 0 40px #059669,
+            0 0 80px #059669;
+          opacity: 1;
+        }
+        20%, 24%, 55% {
+          text-shadow: none;
+          opacity: 0.8;
+        }
+      }
+      .terminal-text {
+        font-family: 'Share Tech Mono', monospace;
+        color: #34d399; /* emerald-400 */
+        animation: flicker 1.5s linear infinite;
+      }
+      @keyframes blink-caret {
+        from, to { border-color: transparent; }
+        50% { border-color: #34d399; }
+      }
+      .caret::after {
+          content: '_';
+          font-weight: bold;
+          margin-left: 2px;
+          animation: blink-caret 1s step-end infinite;
+      }
+      /* Opening Animation */
+      @keyframes opening-fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes opening-fade-out {
+        from { opacity: 1; }
+        to { opacity: 0; pointer-events: none; }
+      }
+      @keyframes opening-logo-glitch {
+        0%, 100% { transform: none; opacity: 1; }
+        25% { transform: translate(1px, -1px); opacity: 0.95; }
+        27% { transform: translate(-1px, 1px); }
+        29% { transform: none; opacity: 1; }
+        65% { transform: translate(-1px, -1px); opacity: 0.9; }
+        67% { transform: translate(1px, 1px); }
+        69% { transform: none; opacity: 1; }
+      }
+      @keyframes pulse-text {
+        50% {
+          opacity: 0.7;
+          text-shadow: 0 0 10px #ef4444; /* red-500 */
+        }
+      }
+      @keyframes text-fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes subtle-glitch-loop {
+        0%, 100% { transform: translate(0,0); opacity: 1; }
+        15% { transform: translate(0.5px, -0.5px); opacity: 0.98; }
+        30% { transform: translate(-0.5px, 0.5px); }
+        45% { transform: translate(0.5px, 0.5px); opacity: 0.99; }
+        60% { transform: translate(-0.5px, -0.5px); }
+        75% { transform: translate(0.5px, 0); }
+        90% { transform: translate(0, -0.5px); opacity: 1; }
       }
     </style>
   <script type="importmap">
