--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       @keyframes pulse-text {
         50% {
           opacity: 0.7;
-          text-shadow: 0 0 10px #ef4444; /* red-500 */
+          text-shadow: 0 0 10px #ffffff;
         }
       }
       @keyframes text-fade-in {
